Fix animation jump when navigating away from page

--- a/apps/root/static/root/css/base.css
+++ b/apps/root/static/root/css/base.css
@@ -262,6 +262,11 @@ button {
   transition: all .5s;
 }
 
+.header .primary-nav.navigated .icon-hamburger #top-bar,
+.header .primary-nav.navigated .icon-hamburger #bottom-bar {
+  transition: none;
+}
+
 .header .primary-nav.open .icon-hamburger #top-bar {
   transform: translateY(-2px) translateX(2px) rotate(-135deg);
 }
